--- a/doxygenOutput/html/index.html
+++ b/doxygenOutput/html/index.html
@@ -69,7 +69,8 @@ $(function() {
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a>For course work for a class at Grand Canyon University</p>
 <p>By Benjamin Carter and Josh Canode.</p>
-<hr  />
+<h1><a class="anchor" id="autotoc_md1"></a>
+&lt;a href="https://codingcando.com/fileShare/file?code=TDAX62YKEW"&gt;Watch Video Here&lt;/a&gt;</h1>
 <h2><a class="anchor" id="autotoc_md2"></a>
 Requirements:</h2>
 <ol type="1">
