Fix heading format

--- a/doxygenOutput/html/index.html
+++ b/doxygenOutput/html/index.html
@@ -69,8 +69,8 @@ $(function() {
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a>For course work for a class at Grand Canyon University</p>
 <p>By Benjamin Carter and Josh Canode.</p>
-<h1><a class="anchor" id="autotoc_md1"></a>
-&lt;a href="https://codingcando.com/fileShare/file?code=TDAX62YKEW"&gt;Watch Video Here&lt;/a&gt;</h1>
+<p><a href="https://codingcando.com/fileShare/file?code=TDAX62YKEW">Watch Video Here</a></p>
+<hr  />
 <h2><a class="anchor" id="autotoc_md2"></a>
 Requirements:</h2>
 <ol type="1">
@@ -105,7 +105,7 @@ File structure:</h2>
 <li>This is where the header files are</li>
 </ul>
 </li>
-<li>Report.docx/.pdf<ul>
+<li>Project8.docx/.pdf<ul>
 <li>The report</li>
 </ul>
 </li>
